[gd_scene load_steps=24 format=3 uid="uid://c5cq4nt0yl43t"]

[ext_resource type="Script" path="res://playfield.gd" id="1_de1dc"]
[ext_resource type="PackedScene" uid="uid://dkpdan17o8x1l" path="res://maze_block.tscn" id="2_lbgyi"]
[ext_resource type="PackedScene" uid="uid://bd2uh8l2mcb1g" path="res://snek.tscn" id="3_jvhy0"]
[ext_resource type="PackedScene" uid="uid://dryg3y1f6logi" path="res://map_frame.tscn" id="4_8ifgk"]
[ext_resource type="Texture2D" uid="uid://qbont3rna5ge" path="res://textures/grass.png" id="5_4c4o8"]
[ext_resource type="PackedScene" uid="uid://3mh0fvm1jcci" path="res://player.tscn" id="6_qmkiw"]
[ext_resource type="FontFile" uid="uid://b88ckwrmql0l8" path="res://assets/Flexi_IBM_VGA_False_437.ttf" id="7_eeir4"]
[ext_resource type="PackedScene" uid="uid://dvaw2npxvr5ig" path="res://game_over.tscn" id="9_gsmfs"]
[ext_resource type="PackedScene" uid="uid://bcbm4lb2vq0x6" path="res://mobile_controls.tscn" id="10_8lkyr"]
[ext_resource type="AudioStream" uid="uid://x1ak4jiyioge" path="res://sounds/normal_music.wav" id="12_noj5f"]
[ext_resource type="AudioStream" uid="uid://blfwbscvqconq" path="res://sounds/spooky_music.wav" id="13_3c3to"]
[ext_resource type="AudioStream" uid="uid://be6cp3rm468km" path="res://sounds/win.wav" id="14_i02uq"]
[ext_resource type="AudioStream" uid="uid://v18r4ijoell7" path="res://sounds/game_over.wav" id="15_a2rsm"]
[ext_resource type="AudioStream" uid="uid://daglhrwcvln5r" path="res://sounds/key_pickup.mp3" id="16_5rnqv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hlfi2"]
size = Vector3(5000, 0.1, 5000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tjh0m"]
albedo_texture = ExtResource("5_4c4o8")
uv1_scale = Vector3(500, 500, 500)
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_ls18c"]
material = SubResource("StandardMaterial3D_tjh0m")
size = Vector2(5000, 5000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b04mf"]
shading_mode = 2
diffuse_mode = 1
specular_mode = 2
emission_enabled = true
emission = Color(1, 1, 1, 1)
texture_filter = 0
texture_repeat = false

[sub_resource type="TextMesh" id="TextMesh_b6fxs"]
material = SubResource("StandardMaterial3D_b04mf")
text = "Follow me out!"
font = ExtResource("7_eeir4")
font_size = 20
depth = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2qw1y"]
albedo_color = Color(1, 0.686252, 0.0195702, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_vm2r4"]
material = SubResource("StandardMaterial3D_2qw1y")
top_radius = 1.5
bottom_radius = 1.5
height = 0.5
radial_segments = 16
rings = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qy3p8"]
albedo_color = Color(0, 0.0583906, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_xpf27"]
material = SubResource("StandardMaterial3D_qy3p8")
size = Vector3(2, 0.5, 2)

[node name="Playfield" type="Node"]
script = ExtResource("1_de1dc")
maze_block_scene = ExtResource("2_lbgyi")
snake_scene = ExtResource("3_jvhy0")
map_scene = ExtResource("4_8ifgk")

[node name="Ground" type="StaticBody3D" parent="."]

[node name="GroundCollider" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
shape = SubResource("BoxShape3D_hlfi2")

[node name="GroundMesh" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.876257, -0.0332108, -0.201639)
mesh = SubResource("PlaneMesh_ls18c")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 0, 100, 25)
visible = false
shadow_enabled = true
directional_shadow_max_distance = 250.0

[node name="Moon" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 0, 300, 25)
visible = false
light_energy = 0.001
shadow_enabled = true
directional_shadow_mode = 1
directional_shadow_max_distance = 250.0

[node name="Player" parent="." instance=ExtResource("6_qmkiw")]

[node name="DebugOverheadCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 50, 80, 50)

[node name="ExitFollowMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.06647, 1, 0)
cast_shadow = 0
mesh = SubResource("TextMesh_b6fxs")

[node name="GameTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
scale = Vector2(0.5, 0.5)

[node name="TimerLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.0
offset_right = 54.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("7_eeir4")
theme_override_font_sizes/font_size = 48
text = "0:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" parent="." instance=ExtResource("9_gsmfs")]
visible = false

[node name="MobileControls" parent="." instance=ExtResource("10_8lkyr")]
visible = false
scale = Vector2(0.5, 0.5)

[node name="MapViewport" type="SubViewport" parent="."]
msaa_3d = 1
use_debanding = true
positional_shadow_atlas_size = 0
size = Vector2i(1024, 1024)
render_target_update_mode = 3

[node name="MapViewportCamera" type="Camera3D" parent="MapViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 50, 80, 50)
projection = 1
size = 110.0
far = 100.0

[node name="EndMarker" type="MeshInstance3D" parent="MapViewport/MapViewportCamera"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
layers = 524288
cast_shadow = 0
mesh = SubResource("CylinderMesh_vm2r4")
skeleton = NodePath("../..")

[node name="PlayerMarker" type="MeshInstance3D" parent="MapViewport/MapViewportCamera"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
layers = 524288
mesh = SubResource("BoxMesh_xpf27")
skeleton = NodePath("../..")

[node name="Music" type="Node" parent="."]

[node name="NormalMusicPlayer" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("12_noj5f")

[node name="SpookyMusicPlayer" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("13_3c3to")

[node name="WinPlayer" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("14_i02uq")

[node name="LosePlayer" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("15_a2rsm")

[node name="KeyHitPlayer" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("16_5rnqv")

[connection signal="at_enemy" from="Player" to="." method="_on_player_at_enemy"]
[connection signal="at_exit" from="Player" to="." method="_on_player_at_exit"]
[connection signal="at_key" from="Player" to="." method="_on_player_at_key"]
[connection signal="cheat" from="Player" to="." method="_on_player_cheat"]
[connection signal="look_direction_changed" from="Player" to="." method="_on_player_look_direction_changed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="h_swipe" from="MobileControls" to="." method="_on_mobile_controls_h_swipe"]
[connection signal="main_menu" from="MobileControls" to="." method="_on_mobile_controls_main_menu"]
